# neuq-platevision

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  local_hyperlpr.py  main.py  providers.py  schemas.py  settings.py  traditional_baseline.py  trained_onnx.py  vision.py
backend/tests/: __init__.py  test_api.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
plan/: notes.md  report_materials.md  server_api_contract.md  task_plan.md  tomorrow_report_ppt_checklist.md
server_artifacts/deliverable/: NO_SYNTHETIC_DATA.txt  PACKAGE_README.md  README.md  charset.txt  data_stats.json  data_stats.md  requirements-cpu-inference.txt  requirements.txt
server_artifacts/deliverable/configs/: crnn_model_config.json  plate_pose.yaml  yolo_pose_train_args.yaml
server_artifacts/deliverable/docs/: ENV_AND_TRAINING.md  ONNX_IO.md  REPRODUCE.md  TRADITIONAL_BASELINE_README.md
server_artifacts/deliverable/metrics/: ccpd_green_manifest_summary.json  color_eval.json  crpd_single_manifest_summary.json  eval_ocr_5color.json  eval_ocr_5color_balanced.json  eval_ocr_5color_prov.json  eval_ocr_real_warp.json  eval_pipeline_5color_pose.json  eval_pipeline_existing_pose.json  knn_baseline.json  knn_baseline_real.json  ocr_final.json  summary_table.md  template_baseline.json
server_artifacts/deliverable/scripts/: build_metrics_table.py  build_ocr_manifest.py  color_eval.py  crpd_extract_province.py  crpd_extract_targeted.py  download_google_drive.py  evaluate.py  (+25 more)
(+9 files in other folders)
