[project]
name = "license-plate-lab-backend"
version = "0.1.0"
description = "FastAPI backend for license plate recognition course design"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "python-multipart>=0.0.20",
  "opencv-python-headless>=4.10",
  "numpy>=2.0",
  "httpx>=0.28",
  "pydantic>=2.10",
  "hyperlpr3>=0.1.3",
  "onnxruntime>=1.23",
]

[tool.uv]
package = false
